syntax = "proto3";

option go_package = "pb/game";

import "google/protobuf/empty.proto";
import "logic/component/scene_comp.proto";
import "logic/client_player/player_scene.proto";
option cc_generic_services = true;

message CentreEnterSceneRequest
{
  SceneInfoPBComponent scene_info = 1;
}

message CentreLeaveSceneRequest
{
}

message CentreLeaveSceneAsyncSavePlayerCompleteRequest
{
}

service CentrePlayerSceneService 
{
  rpc EnterScene (CentreEnterSceneRequest) returns (google.protobuf.Empty);
  rpc LeaveScene (CentreLeaveSceneRequest) returns (google.protobuf.Empty);
  rpc LeaveSceneAsyncSavePlayerComplete (CentreLeaveSceneAsyncSavePlayerCompleteRequest) returns (google.protobuf.Empty);
  rpc SceneInfoC2S (SceneInfoRequest) returns (google.protobuf.Empty);
}