syntax = "proto3";
import "google/protobuf/empty.proto";
option cc_generic_services = true;

service CentrePlayerService 
{
  rpc Test (google.protobuf.Empty) returns (google.protobuf.Empty);
}